--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/python
 
 trigger:
-- master
+- azure-pipelines
 
 pool:
   vmImage: 'windows-2019'
@@ -31,7 +31,7 @@ steps:
   displayName: 'Install dependencies'
 
 - script: |
-    python setup.py build install
+    python setup.py bdist_wheel install
     pip install pytest pytest-azurepipelines
     pytest
   displayName: 'pytest'
