--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,12 +29,14 @@ jobs:
   - script: |
       python setup.py bdist_wheel
     displayName: 'build wheel'
+  - script: |
+      pip install numpy
+      pip install .
+    displayName: 'intall test dependency'
   - task: PowerShell@2
     inputs:
       targetType: 'inline'
       script: |
-        pip install numpy
-        pip install .
         pip install pytest pytest-azurepipelines
         pytest
     displayName: 'pytest'
