Use single form.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,7 +40,7 @@ jobs:
     displayName: 'Publish build artifacts'
   - task: TwineAuthenticate@0
     inputs:
-      artifactFeeds: rigarash
+      artifactFeed: 'rigarash'
     displayName: 'Configure twine authentication'
   - script: twine upload -r rigarash --config-file $(PYPIRC_PATH) dist/*
     displayName: 'Publish project artifacts'
