--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,21 +33,21 @@ jobs:
       pip install numpy
       pip install .
     displayName: 'intall test dependency'
-  - task: TwineAuthenticate@1
-    inputs:
-      artifactFeeds: 'rigarash'
-    displayName: 'Configure twine authentication'
-  - script: twine upload -r rigarash --config-file $(PYPIRC_PATH) dist/*
-    displayName: 'Publish project artifacts'
-  - task: PowerShell@2
+    #- task: TwineAuthenticate@1
+    #inputs:
+    #  artifactFeeds: 'rigarash'
+    #displayName: 'Configure twine authentication'
+    #- script: twine upload -r rigarash --config-file $(PYPIRC_PATH) dist/*
+    #displayName: 'Publish project artifacts'
+    - task: PowerShell@2
     inputs:
       targetType: 'inline'
-      script: |
+    script: |
         pip install daz pytest pytest-azurepipelines
         pytest
     displayName: 'pytest'
   - task: PublishPipelineArtifact@1
-    #inputs:
-      #targetPath: '$(Pipeline.Workspace)' 
+    inputs:
+      targetPath: '$(Pipeline.Workspace)/s/dist' 
       #artifactName: # 'drop'
     displayName: 'Publish build artifacts'
